HelloUltraviolet/Fixtures/RejectedSource/Expressions/TransmuteSizeMismatch/Expected.uv
//! Expected diagnostic metadata for the TransmuteSizeMismatch rejected-source specimen.

expectedDiagnostic("E-MEM-3031", "rule.16.T-Transmute-SizeEq")
